fix: branch html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <article>
                 <figure>
                     <figcaption>Evgeniy Grigorchik</figcaption>
-                    <img src="me.jpg" alt="My photo">
+                    <img src="/img/me.jpg" alt="My photo">
                 </figure>
             </article>
                 <main>
