fix: branch html

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
             <article>
                 <figure>
                     <figcaption>Evgeniy Grigorchik</figcaption>
-                    <img src="/img/me.jpg" alt="My photo">
+                    <img src="img/me.jpg" alt="My photo">
                 </figure>
             </article>
                 <main>
+                    <div>
                      <p> My main aim in RS School is to get as much experience in front-end development as possible.
                          When  I studied at BSUIR 2 first years we learned basics of programming and try to do  some tasks on Java language.
                          I always think that programming is something interesting and usefull in our life. 
@@ -31,6 +32,7 @@
                         <li>Phone number/Telegram - +375(33) 6425344</li>
                         <li>silenthil(@silenthil)</li>
                     </ul>
+                </div>
                 </main>
                 <section><h3>Skills:</h3></section>
                     <ul>
