--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Curriculum vitae</title>
-        <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
     </head>
@@ -13,36 +12,37 @@
                 <h1>Curriculum vitae</h1>
         </header>
             <article>
-                <figure>
-                    <figcaption>Evgeniy Grigorchik</figcaption>
-                    <img src="img/me.jpg" alt="My photo">
-                </figure>
+                    <figure>
+                        <figcaption>Evgeniy Grigorchik</figcaption>
+                        <img src="img/me.jpg" alt="My photo">
+                    </figure>
             </article>
                 <main>
-                    <div>
-                     <p> My main aim in RS School is to get as much experience in front-end development as possible.
+                    <div class='container'>
+                     <p >
+                         My main aim in RS School is to get as much experience in front-end development as possible.
                          When  I studied at BSUIR 2 first years we learned basics of programming and try to do  some tasks on Java language.
                          I always think that programming is something interesting and usefull in our life. 
                          So I started exploring this sphere and decided, that RS School would be a great way for me in achieving my goals. 
                          In future I'm going to become a decent web-developer, who is always in trend.
                     </p>
-                    <h2>Contacts:</h2>
-                    <ul>
-                        <li class="email">[s-a-w-13@mail.ru](s-a-w-13@mail.ru)</li>
-                        <li>Phone number/Telegram - +375(33) 6425344</li>
-                        <li>silenthil(@silenthil)</li>
-                    </ul>
-                </div>
-                </main>
-                <section><h3>Skills:</h3></section>
+                    <section><h2>Skills:</h2></section>
                     <ul>
                         <li>HTML</li>
                         <li>CSS</li>
                         <li>JS</li>
                     </ul>
-                    <h4>English:</h4>
+                    <h2>English:</h2>
                     <ul>
                         <li>Pre-Intermediat</li>
                     </ul>
+                </div>
+                </main>
+                <h2>Contacts:</h2>
+                <ul>
+                    <li>[s-a-w-13@mail.ru](s-a-w-13@mail.ru)</li>
+                    <li>Phone number/Telegram - +375(33) 6425344</li>
+                    <li>silenthil(@silenthil)</li>
+                </ul>
     </body>
 </html>
