refactor: cv index

--- a/index.html
+++ b/index.html
@@ -1,48 +1,57 @@
 <!DOCTYPE html>
- <html lang=en> 
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Curriculum vitae</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <header>
-                <h1>Curriculum vitae</h1>
+<html lang=en>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Curriculum vitae</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="/img/cookie.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <div class="wrapper">
+        <header class="header">
+            <h1>Curriculum vitae</h1>
         </header>
-            <article>
-                    <figure>
-                        <figcaption>Evgeniy Grigorchik</figcaption>
-                        <img src="img/me.jpg" alt="My photo">
-                    </figure>
-            </article>
-                <main>
-                    <div class='container'>
-                     <p >
-                         My main aim in RS School is to get as much experience in front-end development as possible.
-                         When  I studied at BSUIR 2 first years we learned basics of programming and try to do  some tasks on Java language.
-                         I always think that programming is something interesting and usefull in our life. 
-                         So I started exploring this sphere and decided, that RS School would be a great way for me in achieving my goals. 
-                         In future I'm going to become a decent web-developer, who is always in trend.
-                    </p>
-                    <section><h2>Skills:</h2></section>
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JS</li>
-                    </ul>
-                    <h2>English:</h2>
-                    <ul>
-                        <li>Pre-Intermediat</li>
-                    </ul>
+        <main>
+            <section class="slide_bar">
+                <div class="photo"><img src="/img/me.jpg" alt="me" width="300px" height="300px"> </div>
+                <nav>
+                    <a href="https://gmail.com/"><span></span>jenia.silenthill@gmail.com</a>
+                    <a href="tel:+375336425344"> <span></span>Phone: +375336425344</a>
+                    <a href="https://discord.com"><span></span>silenthil(@silenthil)</a>
+                </nav>
+                <div class="content">
+                    <div class="skills">
+                        <div>Skills</div>
+                        <div>Javascript</div>
+                        <div>Html</div>
+                        <div>Css</div>
+                        <div>Git</div>
+                    </div>
+                    <div class="lang">
+                        <div>English</div>
+                        <div>pre-Intermediat</div>
+                    </div>
                 </div>
-                </main>
-                <h2>Contacts:</h2>
-                <ul>
-                    <li>[s-a-w-13@mail.ru](s-a-w-13@mail.ru)</li>
-                    <li>Phone number/Telegram - +375(33) 6425344</li>
-                    <li>silenthil(@silenthil)</li>
-                </ul>
-    </body>
+            </section>
+            <section class="about_me">
+                <div class="Name">Yauheni Hryhorchuk</div>
+                <div class="about"> Little about me:</div>
+                <p>
+                    I m 24 y.o. man who want enter into iT industry.<br> So I started exploring this sphere at the
+                    University
+                    and now i want to learn and practice it more.<br> It's not a problem to learn and investigate
+                    something
+                    new
+                    quickly.
+                </p>
+            </section>
+        </main>
+    </div>
+</body>
+
 </html>
