--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </header>
         <main>
             <section class="slide_bar">
-                <div class="photo"><img src="gitimg/me.jpg" alt="me" width="300px" height="300px"> </div>
+                <div class="photo"><img src="img/me.jpg" alt="me" width="300px" height="300px"> </div>
                 <nav>
                     <a href="https://gmail.com/"><span></span>jenia.silenthill@gmail.com</a>
                     <a href="tel:+375336425344"> <span></span>Phone: +375336425344</a>
