add: remake model

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Curriculum vitae</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/img/cookie.png" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="img/cookie.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -17,40 +18,167 @@
             <h1>Curriculum vitae</h1>
         </header>
         <main>
-            <section class="slide_bar">
-                <div class="photo"><img src="img/me.jpg" alt="me" width="300px" height="300px"> </div>
+            <div class="slide_bar">
+                <div class="me"><img src="img/me.jpg" alt="me" width="250" height="250"></div>
+
                 <nav>
-                    <a href="https://gmail.com/"><span></span>jenia.silenthill@gmail.com</a>
-                    <a href="tel:+375336425344"> <span></span>Phone: +375336425344</a>
-                    <a href="https://discord.com"><span></span>silenthil(@silenthil)</a>
+                    <ul>
+                        <li><a href="https://gmail.com/"><img src="img/email.svg" alt="mail" width="30"
+                                    height="30"><span>jenia.silenthill@gmail.com</span></a></li>
+                        <li><a href="tel:+375336425344"><img src="img/call.svg" alt="phone" width="30" height="30">
+                                <span>+375336425344</span></a></li>
+                        <li><a href="https://discord.com"><img src="img/discord.svg" alt="discord" width="30"
+                                    height="30">
+                                <span>silenthil(@silenthil)</span></a></li>
+                        <li><a href="https://linkedin.com/in/evgeniy-grigorchik"><img src="img/linkin.svg"
+                                    alt="linkedin" width="25" height="25"> <span>Evgeniy Grigorchik</span></a></li>
+                        <li><a href="https://goo.gl/maps/nn9vtETKVBWF6NFe7"><img src="img/geo.svg" alt="location"
+                                    width="20" height="30"> <span>Minsk</span></a></li>
+                    </ul>
                 </nav>
                 <div class="content">
                     <div class="skills">
-                        <div>Skills</div>
+                        <h3>Skills</h3>
                         <div>Javascript</div>
                         <div>Html</div>
                         <div>Css</div>
                         <div>Git</div>
                     </div>
                     <div class="lang">
-                        <div>English</div>
-                        <div>pre-Intermediat</div>
+                        <h3>LANGUAGES</h3>
+                        <div>English Pre-Intermediate</div>
+                    </div>
+                    <div class="INTERESTS">
+                        <h3>INTERESTS</h3>
+                        <div>Sport</div>
+                        <div>Board Games</div>
+                        <div>Computer Games</div>
+                        <div>Coding</div>
                     </div>
                 </div>
-            </section>
-            <section class="about_me">
-                <div class="Name">Yauheni Hryhorchuk</div>
-                <div class="about"> Little about me:</div>
-                <p>
-                    I m 24 y.o. man who want enter into iT industry.<br> So I started exploring this sphere at the
-                    University
-                    and now i want to learn and practice it more.<br> It's not a problem to learn and investigate
-                    something
-                    new
-                    quickly.
-                </p>
-            </section>
+            </div>
+            <div class="maininfo">
+                <section class="about_me">
+                    <h2 class="Name">Evgeniy Grigorchik</h2>
+                    <h3 class="about">JavaScript Developer</h3>
+                    <p>
+                        I’m interested in the programming sphere from the university, so I’ve successfully finished RS
+                        school courses 2020 (Q3) and now I’m extremely motivated and seeking a career opportunity as a
+                        JavaScript Developer that allows applying my programming skills. I have already some experience
+                        in
+                        developing user interface using HTML5, CSS, and JavaScript, React. I am confident in my ability
+                        to
+                        come up with difficult tasks and resolving different issues.
+                    </p>
+                </section>
+                <section class="EXPERIENCE">
+                    <h3 class="exp">WORK EXPERIENCE</h3>
+                    <h4>Engineer</h4>
+                    <div>OJSC «AGAT – Control Systems</div>
+                    <div class="date">07/2018 - Present</div>
+                    <div>
+                        <h5>Tasks</h5>
+                        <ul>
+
+                            <li>Repair and maintenance of the production of electronic devices.</li>
+                            <li>Development of regulatory documents and technical documentation.</li>
+                        </ul>
+                    </div>
+                </section>
+                <section class="projects">
+                    <h3 class="proj">EDUCATIONAL PROJECTS</h3>
+                    <div>
+                        <h4>Momentum</h4>
+                        <ul>
+
+                            <li>An analog of the app of the same name in the Chrome web store (used API).</li>
+                            <li>The application shows the time and username, his goal for the current day (created a
+                                clock).
+                            </li>
+                            <li>The background image changes depending on the time of day (used asynchronous requests).
+                            </li>
+                        </ul>
+
+                    </div>
+                    <div>
+                        <h4>Virtual keyboard</h4>
+                        <ul>
+
+                            <li>In the virtual keyboard project, I used DOM and voice recognition technology -
+                                SpeechRecognition.</li>
+
+                        </ul>
+
+                    </div>
+                    <div>
+                        <h4>Gem puzzle</h4>
+                        <ul>
+
+                            <li>The game is a set of identical square dice with applied numbers, enclosed in a square
+                                box.
+                                The length of the side of the box is four times the length of the side of the knuckles
+                                for a
+                                set of 15 elements, respectively, one square field remains empty in the box.</li>
+                            <li>The goal of the game is to move the knuckles around the box, to achieve ordering them by
+                                numbers, preferably by making as few movements as possible.</li>
+                            <li>There are functions for saving, loading, changing the size of the fields and
+                                automatically
+                                picking up the puzzle.</li>
+                        </ul>
+
+                    </div>
+                    <div>
+                        <h4>English for kids</h4>
+                        <ul>
+
+                            <li>The application for learning English words for kids that works in training and game
+                                modes.
+                                Switching between training and playing modes is triggered by clicking the Train / Play
+                                switch button.</li>
+
+                        </ul>
+
+                    </div>
+                    <div>
+                        <h4>Covid dashboard</h4>
+                        <ul>
+
+                            <li>Task application for tracking the spread of COVID-19 in the world and in selected
+                                countries
+                                was created by a team of three students. </li>
+                            <li>The information was presented in the form of a
+                                table, a list, a graph and an interactive map.</li>
+                        </ul>
+                    </div>
+                </section>
+                <section class="education">
+                    <h3 class="educ">EDUCATION</h3>
+                    <div>
+                        <h4>
+                            Faculty of Radioengineering and Electronics
+                        </h4>
+                        <p>Belarusian State University of Informatics and Radioelectronics</p>
+                        <p class="date">09/2014 - 08/2018</p>
+                    </div>
+                    <div>
+                        <h4>
+                            JavaScript/Front-end Course
+                        </h4>
+                        <p>RS School</p>
+                        <p class="date">08/2020 - 01/2021</p>
+                    </div>
+                </section>
+            </div>
         </main>
+        <footer class="footer">
+            <span class="yearOftask">2021</span>
+            <a href="https://github.com/silenthil" class="Ghlogo"><img src="img/github.svg" alt="github" width="60"
+                    height="60"></a>
+            <a href="https://rs.school/js/" class="rslogo"><img src="img/logo_rs_text.svg" alt="rslogo" width="90"
+                    height="60"></a>
+            <a href="https://www.youtube.com/" class="youtube"><img src="img/youtube.svg" alt="youtube" width="90"
+                    height="60"></a>
+        </footer>
     </div>
 </body>
 
