fix: section about me

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="maininfo">
                 <section class="about_me">
                     <h2 class="Name">Evgeniy Grigorchik</h2>
-                    <h3 class="about">JavaScript Developer</h3>
+                    <h3 class="about">Front-end Developer</h3>
                     <p>
                         I’m interested in the programming sphere from the university, so I’ve successfully finished RS
                         school courses 2020 (Q3) and now I’m extremely motivated and seeking a career opportunity as a
