--- a/index.html
+++ b/index.html
@@ -39,17 +39,19 @@
                 <div class="content">
                     <h3>SKILLS</h3>
                     <div class="skills">
-                        <div>Javascript</div>
-                        <div>Html</div>
-                        <div>Css</div>
-                        <div>Git</div>
-                        <div>React</div>
-                        <div>Agile</div>
-                        <div>Communicative</div>
-                        <div>Multitasking</div>
-                        <div>SASS</div>
-                        <div>Hard-working</div>
-                        <div>Self-motivated</div>
+                        <ul>
+                            <li>Javascript</li>
+                            <li>Html</li>
+                            <li>Css</li>
+                            <li>Git</li>
+                            <li>React</li>
+                            <li>Agile</li>
+                            <li>Communicative</li>
+                            <li>Multitasking</li>
+                            <li>SASS</li>
+                            <li>Hard-working</li>
+                            <li>Self-motivated</li>
+                        </ul>
                     </div>
                     <div class="lang">
                         <h3>LANGUAGES</h3>
